# zzkp

./: README.md
provelib/: Cargo.toml
provelib/host/src/: main.rs
provelib/methods/guest/src/: main.rs
provelib/provelib/: Cargo.toml
provelib/provelib/src/: lib.rs
provelib/usage_examples/: make_receipt.c  validate_receipt.c
zzkp/: ContentView.swift  zzkp-Bridging-Header.h  zzkpApp.swift
zzkp.xcodeproj/: project.pbxproj
zzkp.xcodeproj/xcuserdata/alek.xcuserdatad/xcschemes/: xcschememanagement.plist
zzkpTests/: zzkpTests.swift
zzkpUITests/: zzkpUITests.swift  zzkpUITestsLaunchTests.swift
